<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="8dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/encodesans_bold"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:gravity="start"
                android:layout_margin="10dp"
                android:textSize="13sp"
                android:justificationMode="inter_word"
                android:textColor="#424242"/>

            <TextView
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/noteTitle"
                android:layout_margin="10dp"
                android:fontFamily="@font/encodesans_regular"
                android:textSize="13sp"
                android:text="@string/your_note"
                android:justificationMode="inter_word"
                android:textColor="#616161"/>

            <TextView
                android:id="@+id/timeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etNote"
                android:layout_alignEnd="@+id/etNote"
                android:layout_alignRight="@+id/etNote"
                android:layout_margin="10dp"
                android:textSize="13sp"
                android:fontFamily="@font/encodesans_bold"
                android:text="@string/time_stamp"
                android:textColor="#424242"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>